# time-capsule

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  timelapse.py
templates/: index.html  results.html
